--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,14 @@ and open the template in the editor.
                 <h1>Flexbox</h1>
             </header>
             <nav>
-                navigáció
+                <ul>
+                    <li><a href="index.html">Kezőlap</a></li>
+                </ul>
+                <ul>
+                    <li><a href="valami.html">menü1</a></li>
+                    <li><a href="valami.html">menü2</a></li>
+                    <li><a href="valami.html">menü3</a></li>
+                </ul>
             </nav>
             <article>
                 <h2>1. cím</h2>
